<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Form</class>
 <widget class="QWidget" name="Form">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1491</width>
    <height>566</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <widget class="QWidget" name="verticalLayoutWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>10</y>
     <width>1244</width>
     <height>331</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="GraphicsLayoutWidget" name="graphicsLayoutWidget">
      <property name="enabled">
       <bool>true</bool>
      </property>
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
     </widget>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_4">
      <item>
       <widget class="QLabel" name="callIQTakeAvgTime">
        <property name="minimumSize">
         <size>
          <width>150</width>
          <height>0</height>
         </size>
        </property>
        <property name="text">
         <string>callTakeIQAvgTime?</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QComboBox" name="symbolSize">
        <property name="toolTip">
         <string>Symbol Size</string>
        </property>
        <property name="currentIndex">
         <number>4</number>
        </property>
        <item>
         <property name="text">
          <string>0</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>1</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>2</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>4</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>8</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>16</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>32</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>New Item</string>
         </property>
        </item>
       </widget>
      </item>
      <item>
       <widget class="QComboBox" name="whatToPlot">
        <property name="currentText">
         <string>PeakFinder</string>
        </property>
        <property name="currentIndex">
         <number>3</number>
        </property>
        <item>
         <property name="text">
          <string>LoopsAndVelocity</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>IQ</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>MagPhase</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>PeakFinder</string>
         </property>
        </item>
       </widget>
      </item>
      <item>
       <widget class="QLineEdit" name="loSpanHz">
        <property name="toolTip">
         <string>LO Span (Hz)</string>
        </property>
        <property name="text">
         <string>1e6</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLineEdit" name="loStepHz">
        <property name="toolTip">
         <string>LO Step (Hz)</string>
        </property>
        <property name="text">
         <string>0.1e6</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLineEdit" name="loOffsetHz">
        <property name="toolTip">
         <string>LO Offset (Hz)</string>
        </property>
        <property name="text">
         <string>0</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLabel" name="stepLabel">
        <property name="text">
         <string>TextLabel</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="sweepState">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="minimumSize">
         <size>
          <width>200</width>
          <height>0</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
          <width>200</width>
          <height>16777215</height>
         </size>
        </property>
        <property name="text">
         <string>sweepState?</string>
        </property>
        <property name="checkable">
         <bool>false</bool>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QProgressBar" name="sweepProgressBar">
        <property name="value">
         <number>0</number>
        </property>
       </widget>
      </item>
      <item>
       <spacer name="horizontalSpacer_2">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
         </size>
        </property>
       </spacer>
      </item>
     </layout>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QLabel" name="datetimeClock">
        <property name="minimumSize">
         <size>
          <width>150</width>
          <height>0</height>
         </size>
        </property>
        <property name="text">
         <string>datetimeClock?</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLineEdit" name="loFreqHz">
        <property name="toolTip">
         <string>LO freq (Hz)</string>
        </property>
        <property name="text">
         <string>5.1e9</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLineEdit" name="fToneMin">
        <property name="toolTip">
         <string>f tone (Hz)</string>
        </property>
        <property name="text">
         <string>5.7e9</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLineEdit" name="fToneMax">
        <property name="toolTip">
         <string>f tone (Hz)</string>
        </property>
        <property name="text">
         <string>6.0e9</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QSpinBox" name="nTone">
        <property name="minimum">
         <number>1</number>
        </property>
        <property name="maximum">
         <number>1024</number>
        </property>
        <property name="value">
         <number>1</number>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="generateToneState">
        <property name="text">
         <string>generateToneState?</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QProgressBar" name="toneGenerationProgressBar">
        <property name="value">
         <number>100</number>
        </property>
       </widget>
      </item>
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
         </size>
        </property>
       </spacer>
      </item>
      <item>
       <widget class="QComboBox" name="iFreq">
        <property name="minimumSize">
         <size>
          <width>200</width>
          <height>0</height>
         </size>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="stop">
        <property name="cursor">
         <cursorShape>ClosedHandCursor</cursorShape>
        </property>
        <property name="text">
         <string>Stop</string>
        </property>
       </widget>
      </item>
     </layout>
    </item>
   </layout>
  </widget>
 </widget>
 <customwidgets>
  <customwidget>
   <class>GraphicsLayoutWidget</class>
   <extends>QGraphicsView</extends>
   <header location="global">pyqtgraph</header>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
